...

}

extension OSLogEntryLog.Level {
    var displayName: String {
        switch self {
        case .debug: return "Debug"
        case .info: return "Info"
        case .notice: return "Notice"
        case .error: return "Error"
        case .fault: return "Fault"
        case .undefined: return "Undefined"
        @unknown default: return "Unknown"
...
