...
                    ImageCacheDebugViewController(coder: coder,
                                                  bookmarksDatabase: d.bookmarksDatabase,
                                                  tabsModel: d.tabManager.allTabsModel,
                                                  fireproofing: d.fireproofing)
                }
            }),
            .controller(title: "Sync", { d in
                return self.debugStoryboard.instantiateViewController(identifier: "SyncDebugViewController") { coder in
                    SyncDebugViewController(coder: coder,
                                            sync: d.syncService,
                                            bookmarksDatabase: d.bookmarksDatabase)
                }
            }),
...
