...
            case .webURL:
                let urlType = webUISettings.selectedURLType
                let customURL = webUISettings.customURL
                var detailText = ""

                if urlType == .production {
                    detailText = "Production: \(webUISettings.productionURL)"
                } else if urlType == .custom, let customURL {
                    detailText = "Custom: \(customURL)"
                } else {
                    detailText = "Unsupported URL type: \(urlType)"
                }
                cell.detailTextLabel?.text = detailText
...
