...
        leadingBookmarksButtonView.accessibilityTraits = .button

        passwordsButtonView.accessibilityLabel = "Passwords"
        passwordsButtonView.accessibilityIdentifier = "\(Constant.accessibilityPrefix).Button.Passwords"
        passwordsButtonView.accessibilityTraits = .button

        menuButtonView.accessibilityLabel = "Browsing Menu"
        menuButtonView.accessibilityIdentifier = "\(Constant.accessibilityPrefix).Button.BrowsingMenu"
        menuButtonView.accessibilityTraits = .button

        settingsButtonView.accessibilityLabel = "Settings"
        settingsButtonView.accessibilityIdentifier = "\(Constant.accessibilityPrefix).Button.Settings"
        settingsButtonView.accessibilityTraits = .button

        aiChatButton.accessibilityLabel = UserText.duckAiFeatureName
        aiChatButton.accessibilityIdentifier = "\(Constant.accessibilityPrefix).Button.AIChat"
        aiChatButton.accessibilityTraits = .button

        // This is for compatibility purposes with old OmniBar
        searchAreaView.textField.accessibilityIdentifier = "searchEntry"
        searchAreaView.textField.accessibilityTraits = .searchField

        privacyIconView?.accessibilityIdentifier = "PrivacyIcon"
        privacyIconView?.accessibilityTraits = .button

        searchAreaView.voiceSearchButton.accessibilityLabel = "Voice Search"
...
