...
    @ViewBuilder
    var duckAIEnableToggleRow: some View {
        SettingsCellView(label: UserText.settingsEnableAiChat,
                         subtitle: UserText.settingsEnableAiChatSubtitle,
                         image: Image(uiImage: DesignSystemImages.Glyphs.Size24.aiChat),
                         accessory: .toggle(isOn: viewModel.isAiChatEnabledBinding),
                         accessoryAccessibilityIdentifier: "Settings.AIFeatures.EnableToggle")
    }

    @ViewBuilder
    var duckAISearchInputRows: some View {
        if viewModel.experimentalAIChatManager.isExperimentalAIChatFeatureFlagEnabled {
            let pickerRow = HStack {
...
                         action: { viewModel.openDuckAIChat() },
                         accessory: .custom(AnyView(
                            Image(uiImage: DesignSystemImages.Glyphs.Size24.openInSmall)
                                .foregroundColor(Color(designSystemColor: .iconsSecondary))
                         )),
                         isButton: true)
        .accessibilityIdentifier("Settings.AIFeatures.DuckAISettings")
    }

    @ViewBuilder
    var aiChatFeedbackFooter: some View {
        Text(footerAttributedString)
            .environment(\.openURL, OpenURLAction { url in
...
